2014-10-24  Per Bothner  <per@bothner.com>

	* numbers.scm (numerator, denominator): Extend to handle
	inexacts, as required by r7rs.
	* numbers.scm (integer?): Fix logic error.

2014-10-22  Per Bothner  <per@bothner.com>

	* std_syntax.scm (else unquote unquote-splicing ... => _):
	Provide bindings that report an error.
	* schemebase.scm (else unquote unquote-splicing ... => _):
	Export bindings, as required by R7RS.

2014-10-17  Per Bothner  <per@bothner.com>

	* scheme/file.scm: Implement r7rs library (scheme file), using imports.
	* scheme/lazy.scm: Likewise for (scheme lazy).
	* scheme/repl.scm: Likewise for (scheme repl).
	* scheme/eval.scmm: Implement r7rs library (scheme eval) directly.
	(environment): New procedure.
	(eval): Moved from std_syntax.scm.
	* Makefile.am: Update accordingly.
	* misc.scm (promise?): New explicit type predicate.
	* std_syntax.scm (eval): Moved to scheme/eval.scm.
	(begin-for-syntax, define-for-syntax): Moved to syntax.scm.
	* syntax.scm (begin-for-syntax, define-for-syntax):
	Moved from std_syntax.scm.
	* lists.scm: Remove redundant module-static specifier.

2014-10-14  Per Bothner  <per@bothner.com>

	* misc.scm (eager): Change to just return the argument.
	(make-promise): Tweak return argument if already a promise.

	* misc.scm (make-promise): New procedure.

	* std_syntax.scm (delay-force): New syntax.

	* syntax.scm (cond-expand): Remove - now implemented by IfFeature.
	* scheme/base.scm: New need to import cond-expand from IfFeature.

2014-10-12  Per Bothner  <per@bothner.com>

	* prim_syntax.scm: Add explicit imports instead of implicit
	dependencies on dynamic environment.
	* std_syntax.scm: Likewise.
	* syntax.scm: Likewise.
	* case_syntax.scm: Use plain 'let' rather than '%let'.

2014-10-09  Per Bothner  <per@bothner.com>

	* syntax.scm: Remove import syntax and related bindings.
	Instead, import is now implemented in Java code, to make
	bootstrapping easier - and with better error checking.
