@@ -2,6 +2,8 @@
 
 	* numbers.scm (numerator, denominator): Extend to handle
 	inexacts, as required by r7rs.
+	* numbers.scm (gcd, lcm): Likewise.
+
 	* numbers.scm (integer?): Fix logic error.
 
 2014-10-22  Per Bothner  <per@bothner.com>
